catkin_w_s/logs/control_scripts/build.make.100.log.stderr
/home/subho/catkin_w_s/src/control_scripts/src/scripts/offboard_node.cpp: In member function ‘void Offboard::offboard(float, float, float)’:
/home/subho/catkin_w_s/src/control_scripts/src/scripts/offboard_node.cpp:72:59: error: invalid use of non-static member function ‘void Offboard::waypoint_cb(const ros::TimerEvent&)’
   72 |     Timer waypoint_timer = nh.createTimer(Duration(10.0), waypoint_cb);
      |                                                           ^~~~~~~~~~~
/home/subho/catkin_w_s/src/control_scripts/src/scripts/offboard_node.cpp:25:6: note: declared here
   25 | void Offboard::waypoint_cb(const ros::TimerEvent&)
      |      ^~~~~~~~
make[2]: *** [CMakeFiles/control_scripts.dir/build.make:76: CMakeFiles/control_scripts.dir/src/scripts/offboard_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:238: CMakeFiles/control_scripts.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
